# miniengine

./: .gitignore  CMakeLists.txt  MiniEngine.sln  README.md  main.cpp  miniengine.sln
MiniEngine/: MiniEngine.sln
MiniEngine/MiniEngine/: MiniEngine.vcxproj  MiniEngine.vcxproj.filters  api.h  application.cpp  application.h  camera.cpp  camera.h  color.cpp  color.h  core.cpp  core.h  framebuffer.cpp  framebuffer.h  main.cpp  math.cpp  math.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  meshloader.cpp  meshloader.h  object.cpp  object.h  pixel.cpp  pixel.h  quaternion.cpp  quaternion.h  rotation.h  scene.h  transform.cpp  transform.h  triangle.cpp  triangle.h  vector.cpp  vector.h  vertex.h  window.cpp  window.h
docs/: home.md
include/: json.cpp  json.h
models/: shader.ini  shader.pxl
src/: api.h  application.cpp  application.h  camera.cpp  camera.h  channel.h  color.cpp  color.h  coordinates.h  core.cpp  core.h  fileloader.cpp  fileloader.h  framebuffer.cpp  framebuffer.h  main.cpp  maths.cpp  maths.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  meshloader.cpp  meshloader.h  miniengine.vcxproj  miniengine.vcxproj.filters  object.cpp  object.h  pixel.cpp  pixel.h  printbuffer.cpp  printbuffer.h  quaternion.cpp  quaternion.h  rotation.h  shader.h  staticmesh.h  transform.cpp  transform.h  triangle.cpp  (+4 more)
